# fractal-sets

./: .gitignore  LICENSE  README.md  fractal-sets.cabal  stack.yaml
executables/: burning_ship.hs  juliaset.hs  mandelbrot.hs  newtons_method.hs
