Name:                fractal-sets
Version:             0.1
Synopsis:            Escape-time fractals
Description:         Escape-time fractals created with Haskell   and GD.
                     Includes mandlebrot, julia set, Newton's method, and
                     burning ship.  Output is to PNG.
License:             BSD3
Category:            Graphics, Math
License-file:        LICENSE
Stability:           Alpha
Author:              Greg Heartsfield
Maintainer:          Greg Heartsfield <scsibug@imap.cc>
Cabal-Version:       >= 1.8
build-type:          Simple

-- source-repository head
--   type:              darcs
--   location:          http://gregheartsfield.com/repos/fractal-hs/
Library
  hs-source-dirs:   library
  exposed-modules:  Plot
  build-depends:    base
                  , gd>=3000.1.0

Executable          mandelbrot
  hs-source-dirs:   executables
  Main-is:          mandelbrot.hs
  ghc-options:      -O2 -fasm
  build-depends:    base
                  , fractal-sets
                  , gd>=3000.1.0

Executable           juliaset
  hs-source-dirs:    executables
  Main-is:           juliaset.hs
  ghc-options:       -O2 -fasm
  build-depends:     base
                   , fractal-sets
                   , gd>=3000.1.0

Executable           burning-ship
  hs-source-dirs:    executables
  Main-is:           burning_ship.hs
  ghc-options:       -O2 -fasm
  build-depends:     base
                   , fractal-sets
                   , gd>=3000.1.0

Executable           newtons
  hs-source-dirs:    executables
  Main-is:           newtons_method.hs
  ghc-options:       -O2 -fasm
  build-depends:     base
                   , fractal-sets
                   , gd>=3000.1.0
